--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,7 +8,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         #       show_sql: true
@@ -16,6 +16,6 @@ spring:
 
 logging.level: #???? ??
   org.hibernate.SQL: debug #???? 2?
-  org.hibernate.orm.jdbc.bind: trace
+#  org.hibernate.orm.jdbc.bind: trace
 #  org.hibernate.type: trace #??? ?? 2.x, hibernate5
 #  org.hibernate.orm.jdbc.bind: trace #??? ?? 3.x, hibernate6
