--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-devtools:3.2.2'
+   // implementation 'org.springframework.boot:spring-boot-devtools:3.2.2'
 
     implementation'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.1'
 
